# parallel-programming-labs

./: README.md  matrix_multiplier_omp.cpp
LAB1/: CMakeLists.txt  README.md  account.txt  matrix_multiplier.cpp
LAB1/data/: matrix_a.txt  matrix_b.txt  result.txt
LAB2/: README.md
LAB3/: README.md  matrix_utils.py
LAB5/: README.md  matrix_multiplier_omp.cpp
